--- a/Placeholder1.html
+++ b/Placeholder1.html
@@ -17,13 +17,13 @@
 
     <nav class="navbar bg-body-tertiary">
         <div class="container p-0">
-            <div class="row d-flex justify-content-between">
+            <div class="row d-flex justify-content-between" style="padding: 0;">
                 <img class="col img-fluid" src="./logo-uri site.png" alt="Bootstrap" style="max-width: 100%; height: auto;">
             </div>
         </div>
     </nav>
-<div class="container m-0 p-0 position-relative w-100" style="max-width: 1920px; height: 150px;">
-    <div class=" container-fluid  justify-content-center p-0" id="grad">
+<!-- <div class="container m-0 p-0 position-relative w-100" style="max-width: 1920px; height: 150px;"> -->
+    <div class=" container-fluid  justify-content-center p-0" id="grad" style="margin: 0;">
         <div class="row d-flex flex-column">
             <video autoplay loop muted play-inline class="align-self-center col-12 opacity-100" id="background-video" style="z-index: -1;">
                 <source src="./video-placeholder-gradient.mp4" type="video/mp4">
@@ -32,25 +32,27 @@
     </div>
     <div class="container-fluid d-flex flex-column ">
         <div class="row d-flex flex-column justify-content-start position-absolute align-items-center z-1" style="top: 0; left: 0; width: 100%; padding: 1rem;">
-            <img class="img-fluid col-10 col-md-4" src="./logo cr.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
-            <img class="img-fluid col-7 col-md-3" src="./dată.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0;">
+            <img class="img-fluid col-10 col-md-6" src="./logo cr.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
+            <img class="img-fluid col-7 col-md-4" src="./dată.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0;">
             <a href="https://docs.google.com/forms/d/1Xuk4t0kE8DGHOJSxKVnRK2Dyj_Oy-e9san02Rsv_NYo/edit" target="_blank" style="display: flex; justify-content: center;">
-                <img class="img-fluid col-9 col-md-3" src="./preregister here updated.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
+                <img class="img-fluid col-9 col-md-5" src="./preregister here updated.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
             </a>
         </div>
         
         
     </div>
 
-</div>
+<!-- </div> -->
+    <!-- <br>
     <br>
     <br>
-    <div class="row d-flex justify-content-center p-0" style="background-color: #1F0567;">
+    <br> -->
+    <div class="row d-flex justify-content-center p-0 FAQ" style="background-color: #1F0567;">
         <img src="./FAQfont2.png" id="faqpng" class="d-flex img-fluid col-3">
         <p id="faq"> Check out our FAQ section below </p>
     </div>
     <br>
-    <div class=" d-flex flex-column align-items-center m-0">
+    <div class=" d-flex flex-column align-items-center">
         <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
             data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
             aria-controls="collapseExample" style="background-color: #1F0567; border: 0;">
