--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
 <div class="collapse" id="collapseintrebare3">
     <div class="card card-body p-0 px-3 text-center fs-4"
         style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-        CodeRun este un maraton IT, participanții avansând prin punctele de control (checkpoints) aflate la
-        companiile partenere, dedicat studenților ce vor să-și testeze și să își dezvolte abilitățile de
-        programare.
+        Evenimentul este împărțit în două părți : în perioada 13-24 noiembrie vor avea loc sesiuni de training online ținute de reprezentanți ai companiilor partenere menite să pregătească participanții pentru probele ce urmează, iar în perioada 25-26 noiembrie vor avea loc fizic probele competiției fiecare cu două nivele de dificultate (easy și  hard). În fiecare zi vor avea loc maxim 3 probe, iar fiecare probă va dura 2 ore.
     </div>
 </div>
 
