--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
@@ -37,7 +37,7 @@
             <img class="img-fluid col-10 col-md-6" src="./logo cr.png" style=" top: 10rem; max-width: 100%; height: auto; margin-bottom: 0rem;">
             <img class="img-fluid col-7 col-md-4" src="./dată.png" style=" top: 0; bottom: 10rem; max-width: 100%; height: auto; margin-bottom: 0;">
             <a href="https://docs.google.com/forms/d/1Xuk4t0kE8DGHOJSxKVnRK2Dyj_Oy-e9san02Rsv_NYo/edit" target="_blank" style="display: flex; justify-content: center;">
-                <img class="img-fluid col-9 col-md-5" src="./preregister here updated.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
+                <img class="img-fluid col-11 col-md-6" src="./preregister here updated.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
             </a>
         </div>
         
