--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
         data-bs-toggle="collapse" data-bs-target="#collapseintrebare2" aria-expanded="false"
         aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-        <p class="col-10 buton text-start fs-3 ps-3">2. Cand se desfășoară CodeRun?</p>
+        <p class="col-10 buton text-start fs-3 ps-3">2. Când se desfășoară CodeRun?</p>
         <p class="col text-end pe-4 fs-4" style="color: #E75E8E;"> &#9660; </p>
         <hr class="border-3 opacity-100" style="color: #E75E8E;">
     </button>
@@ -100,7 +100,7 @@
 <div class="collapse" id="collapseintrebare3">
     <div class="card card-body p-0 px-3 text-center fs-4"
         style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-        Evenimentul este împărțit în două părți : în perioada 13-24 noiembrie vor avea loc sesiuni de training online ținute de reprezentanți ai companiilor partenere menite să pregătească participanții pentru probele ce urmează, iar în perioada 25-26 noiembrie vor avea loc fizic probele competiției fiecare cu două nivele de dificultate (easy și  hard). În fiecare zi vor avea loc maxim 3 probe, iar fiecare probă va dura 2 ore.
+        Evenimentul este împărțit în două părți: în perioada 13-24 noiembrie vor avea loc sesiuni de training online ținute de reprezentanți ai companiilor partenere menite să pregătească participanții pentru probele ce urmează, iar în perioada 25-26 noiembrie vor avea loc fizic probele competiției fiecare cu două nivele de dificultate (easy și hard). În fiecare zi vor avea loc maxim 3 probe, iar fiecare probă va dura 2 ore.
     </div>
 </div>
 
@@ -173,7 +173,7 @@ aria-controls="collapseExample" style="background-color: #1F0567; border: 0; pad
 <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
 data-bs-toggle="collapse" data-bs-target="#collapseintrebare8" aria-expanded="false"
 aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-<p class="col-10 buton text-start fs-3 ps-3">8.  O sa mă ajute prezența la CodeRun în cariera?</p>
+<p class="col-10 buton text-start fs-3 ps-3">8.  O să mă ajute prezența la CodeRun în carieră?</p>
 <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
 <hr class="border-3 opacity-100" style="color: #E75E8E;">
 </button>
