transalted questions from romanian to english

--- a/index.html
+++ b/index.html
@@ -59,16 +59,14 @@
         <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
             data-bs-toggle="collapse" data-bs-target="#collapseintrebare1" aria-expanded="false"
             aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-            <p class="col-10 buton text-start fs-3 ps-3">1. Ce este CodeRun?</p>
+            <p class="col-10 buton text-start fs-3 ps-3">1.What is CodeRun?</p>
             <p class="col text-end pe-4 fs-4" style="color: #E75E8E;"> &#9660; </p>
             <hr class="border-3 opacity-100" style="color: #E75E8E;">
         </button>
         <div class="collapse" id="collapseintrebare1">
             <div class="card card-body px-3 text-center fs-4" 
                 style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-                CodeRun este un maraton IT, participanții avansând prin punctele de control (checkpoints) aflate la
-                companiile partenere, dedicat studenților ce vor să-și testeze și să își dezvolte abilitățile de
-                programare.
+                CodeRun is an IT marathon where participants progress through checkpoints located at partner companies. It is dedicated to students who want to test and develop their programming skills.
             </div>
         </div>
 
@@ -77,14 +75,14 @@
     <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
         data-bs-toggle="collapse" data-bs-target="#collapseintrebare2" aria-expanded="false"
         aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-        <p class="col-10 buton text-start fs-3 ps-3">2. Când se desfășoară CodeRun?</p>
+        <p class="col-10 buton text-start fs-3 ps-3">2. When does CodeRun take place? </p>
         <p class="col text-end pe-4 fs-4" style="color: #E75E8E;"> &#9660; </p>
         <hr class="border-3 opacity-100" style="color: #E75E8E;">
     </button>
     <div class="collapse" id="collapseintrebare2">
         <div class="card card-body p-0 px-3 text-center fs-4" 
             style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-            13-26 noiembrie 2023.
+            November 13-26, 2023.
         </div>
     </div>
 
@@ -93,14 +91,14 @@
     <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
     data-bs-toggle="collapse" data-bs-target="#collapseintrebare3" aria-expanded="false"
     aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-    <p class="col-10 buton text-start fs-3 ps-3">3. Cum se desfășoară CodeRun?</p>
+    <p class="col-10 buton text-start fs-3 ps-3">3. How does CodeRun work?</p>
     <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
     <hr class="border-3 opacity-100" style="color: #E75E8E;">
 </button>
 <div class="collapse" id="collapseintrebare3">
     <div class="card card-body p-0 px-3 text-center fs-4"
         style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-        Evenimentul este împărțit în două părți: în perioada 13-24 noiembrie vor avea loc sesiuni de training online ținute de reprezentanți ai companiilor partenere menite să pregătească participanții pentru probele ce urmează, iar în perioada 25-26 noiembrie vor avea loc fizic probele competiției fiecare cu două nivele de dificultate (easy și hard). În fiecare zi vor avea loc maxim 3 probe, iar fiecare probă va dura 2 ore.
+        The event is divided into two parts: from November 13-24, there will be online training sessions conducted by representatives from partner companies to prepare participants for the upcoming challenges. Then, on November 25-26, the physical part of the competition will take place, checkpoints with two levels of difficulty (easy and hard). There will be a maximum of 3 rounds each day, and each checkpoint will last for 2 hours.
     </div>
 </div>
 
@@ -109,14 +107,14 @@
     <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
     data-bs-toggle="collapse" data-bs-target="#collapseintrebare4" aria-expanded="false"
     aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-    <p class="col-10 buton text-start fs-3 ps-3">4. De câtă experiență în programare am nevoie pentru a participa? </p>
+    <p class="col-10 buton text-start fs-3 ps-3">4. What level of programming experience do I need to participate? </p>
     <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
     <hr class="border-3 opacity-100" style="color: #E75E8E;">
     </button>
     <div class="collapse" id="collapseintrebare4">
     <div class="card card-body p-0 px-3 text-center fs-4"
         style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-        Cunoștințele de bază în orice limbaj sunt suficiente, iar experiența nu este necesară! Vei putea să îți aprofundezi cunoștințele pe care deja le ai sau să înveți lucruri noi la sesiunile de training.
+        Basic knowledge of any programming language is sufficient, and prior experience is not required! You will have the opportunity to deepen your existing knowledge or learn new things during the training sessions.
     </div>
 </div>
 
@@ -125,14 +123,14 @@
     <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
     data-bs-toggle="collapse" data-bs-target="#collapseintrebare5" aria-expanded="false"
     aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-    <p class="col-10 buton text-start fs-3 ps-3">5. Cine va juriza competiția? </p>
+    <p class="col-10 buton text-start fs-3 ps-3">5. Who will judge the competition?</p>
     <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
     <hr class="border-3 opacity-100" style="color: #E75E8E;">
     </button>
     <div class="collapse" id="collapseintrebare5">
     <div class="card card-body p-0 px-3 text-center fs-4"
         style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-        Juriul va fi format din reprezentanți ai companiilor partenere, dar și un profesor al Universității Tehnice din Cluj-Napoca.
+        The jury will consist of representatives from partner companies and a professor from the Technical University of Cluj-Napoca.
     </div>
 </div>
 
@@ -141,14 +139,14 @@
     <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
     data-bs-toggle="collapse" data-bs-target="#collapseintrebare6" aria-expanded="false"
     aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-    <p class="col-10 buton text-start fs-3 ps-3">6. Cine se poate înscrie la CodeRun?</p>
+    <p class="col-10 buton text-start fs-3 ps-3">6. Who can register for CodeRun?</p>
     <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
     <hr class="border-3 opacity-100" style="color: #E75E8E;">
     </button>
     <div class="collapse" id="collapseintrebare6">
     <div class="card card-body p-0 px-3 text-center fs-4"
         style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-        Orice student, indiferent de facultatea la care studiază. Înscrierea se poate face individual sau în echipe de cel mult 3 studenți.
+        Any student, regardless of their field of study, can participate. Registration can be done individually or in teams of up to 3 students.
     </div>
 </div>
 
@@ -157,14 +155,14 @@
 <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
 data-bs-toggle="collapse" data-bs-target="#collapseintrebare7" aria-expanded="false"
 aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-<p class="col-10 buton text-start fs-3 ps-3">7.  Pot și elevii de liceu să participe?</p>
+<p class="col-10 buton text-start fs-3 ps-3">7. Can high school students participate?</p>
 <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
 <hr class="border-3 opacity-100" style="color: #E75E8E;">
 </button>
 <div class="collapse" id="collapseintrebare7">
 <div class="card card-body p-0 px-3 text-center fs-4"
     style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-    Nu, CodeRun este un eveniment exclusiv pentru studenți.
+    No, CodeRun is an exclusive event for college students.
 </div>
 </div>
 
@@ -173,14 +171,14 @@ aria-controls="collapseExample" style="background-color: #1F0567; border: 0; pad
 <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
 data-bs-toggle="collapse" data-bs-target="#collapseintrebare8" aria-expanded="false"
 aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-<p class="col-10 buton text-start fs-3 ps-3">8.  O să mă ajute prezența la CodeRun în carieră?</p>
+<p class="col-10 buton text-start fs-3 ps-3">8. Will attending CodeRun help my career?</p>
 <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
 <hr class="border-3 opacity-100" style="color: #E75E8E;">
 </button>
 <div class="collapse" id="collapseintrebare8">
 <div class="card card-body p-0 px-3 text-center fs-4"
     style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-    Da, vei intra în contact direct cu reprezentanți ai companiilor de IT din Cluj.
+    Yes, you will have direct contact with IT company representatives in Cluj.
 </div>
 </div>
 
@@ -190,14 +188,14 @@ aria-controls="collapseExample" style="background-color: #1F0567; border: 0; pad
 <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
 data-bs-toggle="collapse" data-bs-target="#collapseintrebare9" aria-expanded="false"
 aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-<p class="col-10 buton text-start fs-3 ps-3">9. Cum mă pot înscrie?</p>
+<p class="col-10 buton text-start fs-3 ps-3">9. How can I register?</p>
 <p class="col text-end pe-4 fs-3" style="color: #E75E8E;"> &#9660; </p>
 <hr class="border-3 opacity-100" style="color: #E75E8E;">
 </button>
 <div class="collapse" id="collapseintrebare9">
 <div class="card card-body p-0 px-3 text-center fs-4"
     style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-    Stai cu ochii pe site-ul nostru sau pagina de instagram BEST Cluj-Napoca (@best_clujnapoca), înscrierile se vor deschide în curând!
+    Keep an eye on our website or BEST Cluj-Napoca’s Instagram page (@best_clujnapoca). Registrations will open soon!
 </div>
 </div>
 
