--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <button class="btn btn-primary row d-flex flex-row col-11 justify-content-between p-0" type="button"
             data-bs-toggle="collapse" data-bs-target="#collapseintrebare1" aria-expanded="false"
             aria-controls="collapseExample" style="background-color: #1F0567; border: 0; padding: 0;">
-            <p class="col-10 buton text-start fs-3 ps-3">1.What is CodeRun?</p>
+            <p class="col-10 buton text-start fs-3 ps-3">1. What is CodeRun?</p>
             <p class="col text-end pe-4 fs-4" style="color: #E75E8E;"> &#9660; </p>
             <hr class="border-3 opacity-100" style="color: #E75E8E;">
         </button>
@@ -98,7 +98,7 @@
 <div class="collapse" id="collapseintrebare3">
     <div class="card card-body p-0 px-3 text-center fs-4"
         style="background-color: #1F0567; color: white; margin-left: 15px; margin-right: 15px; border: 0;">
-        The event is divided into two parts: from November 13-24, there will be online training sessions conducted by representatives from partner companies to prepare participants for the upcoming challenges. Then, on November 25-26, the physical part of the competition will take place, checkpoints with two levels of difficulty (easy and hard). There will be a maximum of 3 rounds each day, and each checkpoint will last for 2 hours.
+        The event is divided into two parts: from November 13-24, there will be online training sessions conducted by representatives from partner companies to prepare participants for the upcoming challenges. Then, on November 25-26, the physical part of the competition will take place, checkpoints with two levels of difficulty (easy and hard). There will be a maximum of 3 checkpoints each day, and each checkpoint will last for 2 hours.
     </div>
 </div>
 
