--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img class="img-fluid col-10 col-md-6" src="./logo cr.png" style=" top: 10rem; max-width: 100%; height: auto; margin-bottom: 0rem;">
             <img class="img-fluid col-7 col-md-4" src="./dată.png" style=" top: 0; bottom: 10rem; max-width: 100%; height: auto; margin-bottom: 0;">
             <a href="https://docs.google.com/forms/d/1Xuk4t0kE8DGHOJSxKVnRK2Dyj_Oy-e9san02Rsv_NYo/edit" target="_blank" style="display: flex; justify-content: center;">
-                <img class="img-fluid col-11 col-md-6" src="./preregister here updated.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
+                <img class="img-fluid col-11 col-md-6" src="./registerhere.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
             </a>
         </div>
         
