--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <br>
     <br>
     <div class="row d-flex justify-content-center p-0" style="background-color: #1F0567;">
-        <img src="./FAQfont2.png" id="faqpng" class="d-flex img-fluid col-4">
+        <img src="./fAQfont2.png" id="faqpng" class="d-flex img-fluid col-4">
         <p id="faq"> Check out our FAQ section below:</p>
     </div>
     <br>
