--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container-fluid d-flex flex-column ">
         <div class="row d-flex flex-column justify-content-start position-absolute align-items-center z-1" style="top: 0; left: 0; width: 100%; padding: 1rem;">
             <img class="img-fluid col-10 col-md-6" src="./logo cr.png" style=" top: 10rem; max-width: 100%; height: auto; margin-bottom: 0rem;">
-            <img class="img-fluid col-7 col-md-4" src="./dată.png" style=" top: 0; bottom: 10rem; max-width: 100%; height: auto; margin-bottom: 0;">
+            <img class="img-fluid col-7 col-md-4" src="./data.png" style=" top: 0; bottom: 10rem; max-width: 100%; height: auto; margin-bottom: 0;">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScqsXAUmzRWz612L6jmAorgrs1ulILOrHASERAlR2JZhbNHxA/viewform" target="_blank" style="display: flex; justify-content: center;">
                 <img class="img-fluid col-11 col-md-6" src="./registerhere.png" style=" top: 0; max-width: 100%; height: auto; margin-bottom: 0rem;">
             </a>
